corrected extra space for no markets view

--- a/packages/augur-simplified/src/modules/markets/markets-view.styles.less
+++ b/packages/augur-simplified/src/modules/markets/markets-view.styles.less
@@ -36,7 +36,7 @@
     flex: 1;
   }
 
-  > div:last-of-type {
+  > div:last-of-type:not(:first-of-type) {
     justify-content: center;
     margin: @size-48 0 @size-8;
   }
